df vs coo vs csr test conducted,dist optimization test done